<resources>
    <string name="app_name">Plan Zajęć</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Dodaj pierwszy moduł</string>
    <string name="enter_item">Podaj moduł</string>
    <string name="hint_item">Podaj nazwę</string>
    <string name="placeHint">Sala</string>
    <string name="save_title">Zapisz</string>
    <string name="title_activity_list">Plan Zajęć</string>
    <string name="teacher_hint">Nauczyciel</string>
    <string name="start">Początek</string>
    <string name="end">Koniec</string>
    <string name="start_hour_hint">godz.</string>
    <string name="start_minutes_hint">min.</string>
    <string name="areYouSure">Czy na pewno?</string>
    <string name="no">NIE</string>
    <string name="yes">TAK</string>
    <string name="about_text"><u>O APLIKACJI</u></string>
    <string name="about_title">O Aplikacji</string>
    <string name="about_info">Aplikacja stworzona została na zaliczenie przedmiotu Systemy Mobilne i Satelitarne. Celem projektu było utworzenie aplikacji w Android Studio pozawlającej zarządzać planem zajęć na uczelni.</string>
    <string name="about_author">Autor projektu: Paweł Gandorski</string>
    <string name="back">Wróć</string>
</resources>
